--- a/src/app/form-host/form-host.component.scss
+++ b/src/app/form-host/form-host.component.scss
@@ -21,15 +21,13 @@
             display: flex !important;
             margin-right: 0;
             align-items: center;
-            background: #ED482D;
+            background: #b28c30;
+            color: #FFF;
             padding: 0 10px;
             border-bottom: 2px solid #f6a496;
             min-width: 35px;
             justify-content: center;
         }
-    }
-    i.autocomplete-clear-btn {
-        top: 0;
     }
 }
 @media screen and (min-width: 400px) and (max-width: 600px){
@@ -104,7 +102,7 @@
                 cursor: pointer;
             }
             .button i {
-                margin: 0 !important;
+                margin: 0;
             }
             label {
                 left: 10px;
@@ -958,6 +956,14 @@ label {
     /* Forms */
     .form-control {
         height: 40px;
+    }
+    #signUp {
+        button {
+            height: 40px !important;
+            i {
+                margin-left: -15px !important;
+            }
+        }
     }
     .forms .col-sm {
         max-width: 480px;
