fix(form-host): fixed responsive

--- a/src/app/form-host/form-host.component.html
+++ b/src/app/form-host/form-host.component.html
@@ -106,7 +106,7 @@
 
                   <!-- mobile -->
                   <i class="fas fa-location-arrow mobile mobile-icon"></i>
-                  <input type="tel" class="form-control mobile" placeholder="CEP" mask="00000-000" (blur)="checkPhone()" [(ngModel)]="user.cep" formControlName="cep"
+                  <input type="tel" class="form-control mobile" placeholder="CEP" mask="00000-000" [(ngModel)]="user.cep" formControlName="cep"
                     name="cep" required>
                   <div class="valid-feedback">
                     <i class="fas fa-check"></i>
