fix(form-host): fixed responsive

--- a/src/app/form-host/form-host.component.html
+++ b/src/app/form-host/form-host.component.html
@@ -98,14 +98,14 @@
                 <div class="input-group">
                   <div class="input-group-prepend desktop">
                     <div class="input-group-text">
-                      <i class="fas fa-location-arrow"></i>CEP
+                      <i class="fas fa-map-marked-alt"></i>CEP
                     </div>
                   </div>
                   <!-- desktop -->
                   <input type="tel" class="form-control desktop" placeholder="Informe seu CEP" mask="00000-000" [(ngModel)]="user.cep" formControlName="cep" name="cep" (blur)='getZipcode(user.cep)' required>
 
                   <!-- mobile -->
-                  <i class="fas fa-location-arrow mobile mobile-icon"></i>
+                  <i class="fas fa-map-marked-alt mobile mobile-icon"></i>
                   <input type="tel" class="form-control mobile" placeholder="CEP" mask="00000-000" [(ngModel)]="user.cep" formControlName="cep"
                     name="cep" required>
                   <div class="valid-feedback">
@@ -149,14 +149,14 @@
               <div class="input-group">
                 <div class="input-group-prepend desktop">
                   <div class="input-group-text">
-                    <i class="fas fa-location-arrow"></i>Bairro
+                    <i class="fas fa-map-marked-alt"></i>Bairro
                   </div>
                 </div>
                 <!-- desktop -->
                 <input type="text" class="form-control desktop" disabled='true' placeholder="Bairro" name='neighborhood' [(ngModel)]='user.neighborhood' formControlName='neighborhood' required>
 
                 <!-- mobile -->
-                <i class="fas fa-location-arrow mobile mobile-icon"></i>
+                <i class="fas fa-map-marked-alt mobile mobile-icon"></i>
                 <input type="tel" class="form-control mobile" disabled='true' placeholder="Bairro" name='neighborhood' [(ngModel)]='user.neighborhood' formControlName='neighborhood' required>
                 <div class="valid-feedback">
                   <i class="fas fa-check"></i>
@@ -175,14 +175,14 @@
               <div class="input-group">
                 <div class="input-group-prepend desktop">
                   <div class="input-group-text">
-                    <i class="fas fa-location-arrow"></i>Cidade
+                    <i class="fas fa-map-marked-alt"></i>Cidade
                   </div>
                 </div>
                 <!-- desktop -->
                 <input type="text" class="form-control desktop" disabled='true' placeholder="Cidade" name='city' [(ngModel)]='user.city' formControlName='city' required>
 
                 <!-- mobile -->
-                <i class="fas fa-location-arrow mobile mobile-icon"></i>
+                <i class="fas fa-map-marked-alt mobile mobile-icon"></i>
                 <input type="tel" class="form-control mobile" disabled='true' placeholder="Cidade" name='city' [(ngModel)]='user.city' formControlName='city' required>
                 <div class="valid-feedback">
                   <i class="fas fa-check"></i>
@@ -201,14 +201,14 @@
               <div class="input-group">
                 <div class="input-group-prepend desktop">
                   <div class="input-group-text">
-                    <i class="fas fa-location-arrow"></i>Estado
+                    <i class="fas fa-map-marked-alt"></i>Estado
                   </div>
                 </div>
                 <!-- desktop -->
                 <input type="text" class="form-control desktop" disabled='true' placeholder="Estado" name='state' [(ngModel)]='user.state' formControlName='state' required>
 
                 <!-- mobile -->
-                <i class="fas fa-location-arrow mobile mobile-icon"></i>
+                <i class="fas fa-map-marked-alt mobile mobile-icon"></i>
                 <input type="tel" class="form-control mobile" disabled='true' placeholder="Estado" [(ngModel)]='user.state' formControlName='state' name='state' required>
                 <div class="valid-feedback">
                   <i class="fas fa-check"></i>
