fix(landing-host): updated background color

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -22,7 +22,7 @@ $primary-ge: #41bb9b;
 $primary-gt: #0b8ea0;
 $white: #fff;
 $highlight: #fcb215;
-$primary-host: #ffc845;
+$primary-host: #f1c40f;
 // typography
 h1,
 h2,
