chore(form host): sign up service (new method added), redirect to thank you page

--- a/src/app/form-host/form-host.component.html
+++ b/src/app/form-host/form-host.component.html
@@ -49,7 +49,7 @@
                 </div>
               </div>
               <!-- desktop -->
-              <input type="text" class="form-control desktop" placeholder="Relaxa, nós também não gostamos de spam" (blur)="checkEmail()" [(ngModel)]="user.email" formControlName="email" name="email" required>
+              <input type="text" class="form-control desktop" placeholder="Relaxa, nós também não gostamos de spam" [(ngModel)]="user.email" formControlName="email" name="email" required>
 
               <!-- mobile -->
               <i class="fas fa-envelope mobile mobile-icon"></i>
