--- a/src/app/form-host/form-host-thank-you/form-host-thank-you.component.scss
+++ b/src/app/form-host/form-host-thank-you/form-host-thank-you.component.scss
@@ -33,6 +33,9 @@ $break-sm: 576px;
         margin-bottom: 20px;
         font-weight: bold;
     }
+    p {
+        font-size: 16px;
+    }
 }
 
 #resultado {
