chore(landing-page-menu, landing-page-footer): menu and footer links open in new tabs + visual fixes
AIESEC-312 - https://devmagic.atlassian.net/browse/AIESEC-312

--- a/src/app/landing-page-menu/landing-page-menu.component.html
+++ b/src/app/landing-page-menu/landing-page-menu.component.html
@@ -18,26 +18,37 @@
             <li>
               Faça um intercâmbio
               <ul class="animated fadeIn faster ul-products">
-                <li (click)="goToGv()">
-                  Voluntário Global
-                </li>
-                <li (click)="goToGe()">
-                  Empreendedor Global
-                </li>
-                <li (click)="goToGt()">
-                  Talento Global
-                </li>
+                <a href="/voluntario-global" target="_blank">
+                  <li>
+                    Voluntário Global
+                  </li>
+                </a>
+                <a href="/empreendedor-global" target="_blank">
+                  <li>
+                    Empreendedor Global
+                  </li>
+                </a>
+                <a href="/talento-global" target="_blank">
+                  <li>
+                    Talento Global
+                  </li>
+                </a>
               </ul>
             </li>
+            <a href="http://blog.aiesec.org.br/hospede-um-intercambista/" target="_blank" class="no-hover">
+              <li>
+                Lar Global
+              </li>
+            </a>
             <li>
-              Seja nosso parceiro
+              Seja nosso parceiroo
               <ul class="animated fadeIn faster ul-products">
-                <a href="http://business.aiesec.org.br/">
+                <a href="http://business.aiesec.org.br/" target="_blank">
                   <li>
                     Empresas
                   </li>
                 </a>
-                <a href='http://blog.aiesec.org.br/youthspeak/'>
+                <a href='http://youthspeak.aiesec.org.br/' target="_blank">
                   <li>
                     Youthspeak
                   </li>
@@ -47,17 +58,17 @@
             <li>
               Planeje sua viagem
               <ul class="animated fadeIn faster ul-travel">
-                <a href="https://www.maxmilhas.com.br/?utm_source=aiesec&utm_medium=afiliados&utm_campaign=77a6ec5a_paid_lower">
+                <a href="https://www.maxmilhas.com.br/?utm_source=aiesec&utm_medium=afiliados&utm_campaign=77a6ec5a_paid_lower" target="_blank">
                   <li>
                     Passagens Aéreas
                   </li>
                 </a>
-                <a href="https://www.confidencecambio.com.br/ecommerce/?utm_source=barra&utm_medium=home#/home?_k=9twr7h">
+                <a href="https://www.confidencecambio.com.br/ecommerce/?utm_source=barra&utm_medium=home#/home?_k=9twr7h" target="_blank">
                   <li>
                     Câmbio de Moedas
                   </li>
                 </a>
-                <a href="https://www.assistcard.com/br/b2c/aiesec-br">
+                <a href="https://www.assistcard.com/br/b2c/aiesec-br" target="_blank">
                   <li>
                     Seguro Saúde
                   </li>
@@ -67,19 +78,19 @@
             <li>
               Blog
               <ul class="animated fadeIn faster ul-blog">
-                <a href="http://blog.aiesec.org.br/seja-parceiro/empresas/">
+                <a href="http://business.aiesec.org.br/blog/" target="_blank">
                   <li>
                     Empresas
                   </li>
                 </a>
-                <a href="http://blog.aiesec.org.br/blog/estudantes/">
+                <a href="http://blog.aiesec.org.br/blog/estudantes/" target="_blank">
                   <li>
                     Estudantes
                   </li>
                 </a>
               </ul>
             </li>
-            <a class='aiesec-search' href='https://aiesec.org/search'>
+            <a class='aiesec-search' href='https://aiesec.org/search' target="_blank">
               <li>
                 Veja as oportunidades
               </li>
@@ -105,12 +116,12 @@
             <li>
               <span>Seja nosso parceiro</span>
               <ul class='animated fadeIn faster'>
-                <a href="http://business.aiesec.org.br/">
+                <a href="http://business.aiesec.org.br/" target="_blank">
                   <li>
                     Empresas
                   </li>
                 </a>
-                <a href='http://blog.aiesec.org.br/youthspeak/'>
+                <a href='http://blog.aiesec.org.br/youthspeak/' target="_blank">
                   <li>
                     Youthspeak
                   </li>
@@ -120,17 +131,17 @@
             <li>
               <span>Planeje sua viagem</span>
               <ul class="animated fadeIn faster">
-                <a href="https://www.maxmilhas.com.br/?utm_source=aiesec&utm_medium=afiliados&utm_campaign=77a6ec5a_paid_lower">
+                <a href="https://www.maxmilhas.com.br/?utm_source=aiesec&utm_medium=afiliados&utm_campaign=77a6ec5a_paid_lower" target="_blank">
                   <li>
                     Passagens Aéreas
                   </li>
                 </a>
-                <a href="https://www.confidencecambio.com.br/ecommerce/?utm_source=barra&utm_medium=home#/home?_k=9twr7h">
+                <a href="https://www.confidencecambio.com.br/ecommerce/?utm_source=barra&utm_medium=home#/home?_k=9twr7h" target="_blank">
                   <li>
                     Câmbio de Moedas
                   </li>
                 </a>
-                <a href="https://www.assistcard.com/br/b2c/aiesec-br">
+                <a href="https://www.assistcard.com/br/b2c/aiesec-br" target="_blank">
                   <li>
                     Seguro Saúde
                   </li>
@@ -140,23 +151,23 @@
             <li>
               <span>Blog</span>
               <ul class="animated fadeIn faster">
-                  <a href="http://blog.aiesec.org.br/seja-parceiro/empresas/">
+                  <a href="http://blog.aiesec.org.br/seja-parceiro/empresas/" target="_blank">
                     <li>
                       Empresas
                     </li>
                   </a>
-                  <a href="http://blog.aiesec.org.br/blog/estudantes/">
+                  <a href="http://blog.aiesec.org.br/blog/estudantes/" target="_blank">
                     <li>
                       Estudantes
                     </li>
                   </a>
               </ul>
             </li>
-            <a class='aiesec-search' href='https://aiesec.org/search'>
+            <a class='aiesec-search' href='https://aiesec.org/search' target="_blank">
               <li>
                 <span>Veja as oportunidades</span>
               </li>
-            </a>
+            </a> 
           </ul>
         </div>
       </div>
