chore(form host thank you): redirecto to landing page

--- a/src/app/form-host/form-host-thank-you/form-host-thank-you.component.scss
+++ b/src/app/form-host/form-host-thank-you/form-host-thank-you.component.scss
@@ -15,6 +15,11 @@ $break-sm: 576px;
     background-color: #f1c40f;
     font-family: 'Lato', sans-serif;
     color: #ffffff;
+    .btn {
+        margin: 30px 0;
+        color: #674e13;
+        font-size: 16px;
+    }
 }
 
 
