fix(host): added new text for 'Visão Geral'

--- a/src/app/landing-page-host/landing-page-host.component.html
+++ b/src/app/landing-page-host/landing-page-host.component.html
@@ -16,7 +16,11 @@
             Visão geral do programa
           </h2>
           <p>
-            Pelo programa Lar Global da AIESEC você pode viver uma experiência de aprendizado cultural e criar conexões internacionais ao se voluntariar  para receber um intercambista por 6 a 12 semanas.
+            Pelo programa <strong>Lar Global da AIESEC</strong> você pode viver uma experiência de aprendizado multicultural ao se <strong>voluntariar para receber um intercambista por 6 a 12 semanas</strong>.<br/><br/>
+
+É sua chance de <strong>colocar em prática uma língua estrangeira</strong>, viver novas experiências e <strong>trocas culturais</strong>, criar <strong>conexões internacionais</strong> e, principalmente, <strong>viver a diversidade</strong>!<br/><br/>
+
+Confira no vídeo ao lado o relato de um de nossos participantes!
         </div>
         <div class="col-lg-5 col-sm-12 col-md-12">
           <iframe width="100%" height="315" src="https://www.youtube.com/embed/80D5Gra4QSc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
