chore(landing page menu): mobile menu fixed and 'lar global' added

--- a/src/app/landing-page-menu/landing-page-menu.component.html
+++ b/src/app/landing-page-menu/landing-page-menu.component.html
@@ -113,6 +113,11 @@
                 </li>
               </ul>
             </li>
+            <a href="http://blog.aiesec.org.br/hospede-um-intercambista/" target="_blank" class="no-hover">
+              <li>
+                <span>Lar Global</span>
+              </li>
+            </a>
             <li>
               <span>Seja nosso parceiro</span>
               <ul class='animated fadeIn faster'>
