--- a/src/app/landing-page-menu/landing-page-menu.component.scss
+++ b/src/app/landing-page-menu/landing-page-menu.component.scss
@@ -16,6 +16,11 @@
 
 ul#menu {
 
+    align-items: center;
+    justify-content: space-between !important;
+    width: 100%;
+    justify-content: center;
+
     >li{
         display: flex;
         align-items: center;
@@ -363,8 +368,9 @@ ul#menu {
         span {
             font-weight: bold;
             text-align: left;
-            padding-left: 5px;
-            font-size: 1.3rem;
+            font-size: 1.8rem;
+            padding-top: 10px !important;
+            display: block;
         }
 
         li ul {
@@ -373,10 +379,14 @@ ul#menu {
             background-color: transparent !important;
 
             li {
-                font-size: 1.2rem;
-                padding: 10px 0px !important;
+                font-size: 1.6rem;
+                padding: 15px 0px !important;
             }
         }
+    }
+
+    #fixedMenu.fixedMenu .logo-aiesec {
+        margin: 15px 0;
     }
 }
 
